留下dist目录中的内容

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <title>cnodejs-vue2</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>cnodejs-vue2</title><link href=/static/css/app.617db9ee30e5b2d81f22640a4d9e2890.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.02cf808381dcbba97335.js></script><script type=text/javascript src=/static/js/vendor.bb3265f825d8afc4a851.js></script><script type=text/javascript src=/static/js/app.97fdd998ca2a24cd9d57.js></script></body></html>
